latte/tests/good/cast.lat
class A {}
class B extends A {}

int main() {
  A a = (B)null;
  return 0;
}
