latte/tests/bad/type/class/override_invalid.lat
class A {
  void f() {}
}

class B extends A {
  int f() { return 1; }
}

int main() {
  return 0;
}
